[package]
name = "duck"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.13", features = ["http1", "client"] }
hyper-tls = "0.5.0"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "io-util", "macros", "fs"] }